renaming open account action to create account action
