# src/main/java/com/dominikcebula/bank/service/rest/validator/validators/AccountCreateRequestValidator.java
@@ -1,23 +1,23 @@
 package com.dominikcebula.bank.service.rest.validator.validators;
 
-import com.dominikcebula.bank.service.dto.AccountOpenRequest;
+import com.dominikcebula.bank.service.dto.AccountCreateRequest;
 import com.dominikcebula.bank.service.rest.validator.Validator;
 import com.dominikcebula.bank.service.rest.validator.exception.ValidatorException;
 
-public class AccountOpenRequestValidator extends Validator<AccountOpenRequest> {
+public class AccountCreateRequestValidator extends Validator<AccountCreateRequest> {
 
     static final String MESSAGE_DEPOSIT_NOT_SPECIFIED = "Initial Deposit has to be specified";
     public static final String MESSAGE_DEPOSIT_INCORRECT = "Initial Deposit has to be greater than zero";
 
     @Override
-    public void validate(AccountOpenRequest accountOpenRequest) throws ValidatorException {
+    public void validate(AccountCreateRequest accountCreateRequest) throws ValidatorException {
         assertConditionMet(
-                accountOpenRequest.getInitialDeposit() != null,
+                accountCreateRequest.getInitialDeposit() != null,
                 MESSAGE_DEPOSIT_NOT_SPECIFIED
         );
 
         assertConditionMet(
-                accountOpenRequest.getInitialDeposit().floatValue() > 0,
+                accountCreateRequest.getInitialDeposit().floatValue() > 0,
                 MESSAGE_DEPOSIT_INCORRECT
         );
     }
